[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/images/icon.png" type="Texture" id=2]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="SphereShape" id=2]
radius = 10.0

[sub_resource type="SphereShape" id=3]
radius = 1.5

[node name="Enemy" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 3, 0, 0, 0, 5, 0, 0, 0, 1, 0, 1.5, 0 )
billboard = 2
texture = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 0 )
shape = SubResource( 1 )

[node name="CSGCylinder" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, 1.5, 0 )
visible = false

[node name="PlayerDetector" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="CollisionShape" type="CollisionShape" parent="PlayerDetector"]
shape = SubResource( 2 )

[node name="PlayerDamager" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="CollisionShape" type="CollisionShape" parent="PlayerDamager"]
shape = SubResource( 3 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="body_entered" from="PlayerDamager" to="." method="_on_PlayerDamager_body_entered"]
[connection signal="body_exited" from="PlayerDamager" to="." method="_on_PlayerDamager_body_exited"]
